--- a/src/Pages/Otp.css
+++ b/src/Pages/Otp.css
@@ -1,11 +1,11 @@
 
 .enterotp {
   position: absolute;
-    width: 371px;
-    height: 348px;
-    background: #FFFFFF;
-    border-radius: 33px;
-    padding: 5px;
+  width: 371px;
+  height: 348px;
+  background: #FFFFFF;
+  border-radius: 33px;
+  padding: 5px;
   }
   
 .enterotp  p {
@@ -15,24 +15,24 @@
   }
   
 .enterotp  h2 {
-    font-weight: 700;
-    font-size: 20px;
-    font-family: 'Poppins';
-    padding: 4% 0% 0% 4%;
-    text-align: center;
+  font-weight: 700;
+  font-size: 20px;
+  font-family: 'Poppins';
+  padding: 4% 0% 0% 4%;
+  text-align: left;
    
   }
   
 .enterotp input {
-    border: 1px solid #f7f7f7;
-    background: #f7f7f7;
-    border-radius: 38px;
-    color: #191919;
-    font-size: 14px;
-    text-align: left;
-    width: 85%;
-    margin: 10px 5px 10px 5px;
-    padding: 3% 8% ;
+  border: 1px solid #f7f7f7;
+  background: #f7f7f7;
+  border-radius: 38px;
+  color: #191919;
+  font-size: 14px;
+  text-align: left;
+  width: 420px;
+  margin: 15px 5px 10px 0px;
+  padding: 3% 8% ;
   }
   
 .enterotp p {
@@ -42,36 +42,34 @@
   }
   
 .enterotp  button {
-  margin-left: 5%;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  cursor: pointer;
-  height: 30px;
-  width: 300px;
-  border: #B22D31;
-  background: #B22D31;
-  border-radius: 39px;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 19px;
-  color: #FFFFFF;
+  margin-left: 30%;
+margin-bottom: 20px;
+margin-top: 20px;
+cursor: pointer;
+height: 50px;
+width: 70%;
+border: #B22D31;
+background: #B22D31;
+border-radius: 39px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 19px;
+color: #FFFFFF;
   }
   
 .enterotp  button:disabled {
     cursor: not-allowed;
   }
 .enterotp  h3{
-  
-    font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  color: #191919;
-  text-align: center;
-  
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 17px;
+color: #191919;
+padding-left: 150px;
   }
 .enterotp h3 .link {
     color: #B22D31;
