--- a/src/Extra-files/FavProd.css
+++ b/src/Extra-files/FavProd.css
@@ -1,40 +1,32 @@
 .figure {
-  display: block;
-  margin-top: 50px;
-  margin-left: 30px;
-}
-
-.figure .remove {
-  display: block;
-  border: white;
-  margin-left: 35px;
+  height: 250px;
+  width : 800;
+  color: black;
+  border: none;
+  margin: 10px 20px !important;
   border-radius: 24px;
-  background-color: #b22d31;
-  color: white;
-
+  background-color: antiquewhite;
 }
-.figure img {
-  vertical-align: middle;
-  border-style: none;
-  padding: 11px 20px;
-  margin-top: 5px;
-  height: 200px;
-  width : 250px;
- }
 
+.figure .productimg {
+  height: 200px !important;
+  width: 200px !important;
+  background-color: transparent !important;
+  border-radius: 24px;
+  box-shadow: 0px 5px 22px rgb(17 17 18 / 7%);
+  border-color: none;
+  padding: 10px 10px !important;
+}
 
 .figure h5 {
+  color: black;
   font-weight: 500;
   font-size: 18px;
   font-style: normal;
-  color: #191919;
   text-align: center;
- }
- 
+}
 
-.figure p{
-  font-size: 12px;
-     font-family: 'Poppins';
-     margin-left: 30px;
-     text-align: center;
- }
+.figure h3 {
+  font-size: 5px;
+  color: #FFFFFF;
+}
