--- a/src/Pages/FavouriteProducts.css
+++ b/src/Pages/FavouriteProducts.css
@@ -1,14 +1,35 @@
 .favProd {
-  overflow: hidden;
-  padding: 0px 65px;
+    position: absolute;
+    left: 50px;
+    top: 150px;
+    display: block;
+    background: #FFFFFF;
+    border-radius: 33px;
+  }
+  
+  .favProd  h2 {
+    font-weight: 700;
+    font-size: 20px;
+    font-family: 'Poppins';
+    padding: 4% 0% 0% 0%;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  .favProd button {
+    margin-left: 580px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    cursor: pointer;
+    border-radius: 39px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FFFFFF;
+    background-color: #f5d6d9cc;
+    }
+
+.favProd button:hover {
+    color: white;
 }
-
-
-.favProd h2 {
-  text-align: center;
-  margin: 80px 20px 30px 20px;
-  font-family: 'Poppins';
-  font-weight: 600;
-  color: #191919;
-}
-
