--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -5,7 +5,7 @@ body {
 }
 
 .my-navbar {
-    box-shadow: 0px 10px 30px rgba(216, 216, 216, 0.45);
+    box-shadow: 0px 10px 30px rgba(225,225,225, 100%);
     position: absolute;
     width: 100%;
     background: #fff4f5;
@@ -47,7 +47,6 @@ a.nav-link {
     font-weight: 500;
     font-family: 'Poppins';
     font-style: normal;
-    color: #191919 !important;
 }
 .nav-item ul li {
     display: inline-block;
@@ -148,7 +147,7 @@ a.nav-link {
 @media only screen and (max-width: 600px) {
 
     .nav-link {
-        color: #000 !important;
+        color: red !important;
     }
     .dropdown-toggle{
         padding-left: 26px;
