--- a/src/Extra-files/Cate.css
+++ b/src/Extra-files/Cate.css
@@ -1,34 +1,36 @@
- .figure {
-    background: #FFFFFF;
-    height: 250px;
-    width : 800;
-    color: black;
-    border: none;
-    margin: 10px 30px;
- }
-
-.figure :hover{
-    background: #f5d6d9cc;
-}
-.figure img {
-    vertical-align: middle;
-    border-radius: 24px;
-    box-shadow: 0px 5px 22px rgb(17 17 18 / 7%);
-    border-color: none;
-    padding: 11px 0px;
-    width: 150px;
-    object-fit: contain;
-}
-
-.figure h5 {
-    color: black;
-    font-weight: 500;
-    font-size: 18px;
-    font-style: normal;
-    text-align: center;
-}
-
-.figure h3 {
-    font-size: 5px;
-    color: #FFFFFF;
-}
+.span {
+    display: block;
+    }
+    
+    .span  h5 {
+        color: black !important;
+        font-weight: 500;
+        font-size: 18px;
+        font-style: normal;
+        text-align: center;
+    }
+    .figure {
+        height: 220px;
+        width : 200px;
+        border: none;
+        margin: 10px 5px !important;
+        border-radius: 24px;
+        background-color: white;
+     }
+     
+    .figure .productimg {
+        height: 150px !important;
+        width: 150px !important;
+        border-radius: 24px;
+        box-shadow: none !important;
+        border-color: white !important;
+        padding: 10px 5px!important;
+    }
+    .span h3 {
+        font-size: 5px;
+        color: #FFFFFF;
+    }
+    
+    .figure:hover {
+      background-color: #f5d6d9cc;
+    }
