--- a/src/Extra-files/FavProd.css
+++ b/src/Extra-files/FavProd.css
@@ -1,32 +1,47 @@
-.figure {
-  height: 250px;
-  width : 800;
-  color: black;
-  border: none;
-  margin: 10px 20px !important;
-  border-radius: 24px;
-  background-color: antiquewhite;
+.span{
+  margin: 10px;
+  height: fit-content;
+  display: block;
 }
 
-.figure .productimg {
-  height: 200px !important;
-  width: 200px !important;
-  background-color: transparent !important;
-  border-radius: 24px;
-  box-shadow: 0px 5px 22px rgb(17 17 18 / 7%);
-  border-color: none;
-  padding: 10px 10px !important;
+.remove {
+  background-color: #B22D31 !important;
+  margin-left: 25px !important;
+  margin-bottom: 5px !important;
+  color: white;
+  height: 25px;
+  width: 200px;
 }
 
-.figure h5 {
-  color: black;
+.span  h5 {
+  color: black !important;
   font-weight: 500;
   font-size: 18px;
   font-style: normal;
   text-align: center;
 }
+.figure {
+  height: 280px;
+  width : 200px;
+  border: none;
+  margin: 20px 10px !important;
+  border-radius: 24px;
+  background-color: white;
+}
 
-.figure h3 {
+.figure .productimg {
+  height: 150px !important;
+  width: 150px !important;
+  border-radius: 24px;
+  box-shadow: none !important;
+  border-color: white !important;
+  padding: 10px !important;
+}
+.span h3 {
   font-size: 5px;
   color: #FFFFFF;
+}
+
+.figure:hover {
+background-color: #f5d6d9cc;
 }
