--- a/src/Extra-files/Cate.css
+++ b/src/Extra-files/Cate.css
@@ -11,7 +11,7 @@
     }
     .figure {
         height: 220px;
-        width : 200px;
+        width : 180px;
         border: none;
         margin: 10px 5px !important;
         border-radius: 24px;
@@ -24,7 +24,7 @@
         border-radius: 24px;
         box-shadow: none !important;
         border-color: white !important;
-        padding: 10px 5px!important;
+        padding:8px!important;
     }
     .span h3 {
         font-size: 5px;
