--- a/src/Components/Slider.css
+++ b/src/Components/Slider.css
@@ -10,8 +10,8 @@
     border-radius: 0px 0px 32px 32px;
     border: 1px solid #fff4f5;
     overflow: hidden;
-    padding: 20px 0px 0px 0px;
-    margin-top: 50px;
+    padding: 70px 0px 0px 0px;
+    margin-top: 50px !important;
     margin-left: 25px;
 }
 
