--- a/src/Pages/FavouriteProducts.css
+++ b/src/Pages/FavouriteProducts.css
@@ -1,34 +1,196 @@
-.favProd {
-  position: absolute;
-  left: 50px;
-  top: 150px;
-  display: block;
-  background: #FFFFFF;
-  border-radius: 33px;
+.product_section {
+  overflow: hidden;
+  padding: 0px 65px;
 }
 
-.favProd  h2 {
-  font-weight: 700;
-  font-size: 20px;
+.product_section h4 {
+  text-align: center;
+  margin: 80px 20px 30px 20px;
   font-family: 'Poppins';
-  padding: 4% 0% 0% 0%;
- margin-left: 450px;
-  margin-bottom: 30px;
+  font-weight: 600;
+  color: #191919;
 }
-.favProd button {
-  margin-left: 580px;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  cursor: pointer;
-  border-radius: 39px;
-  font-family: 'Inter';
+
+.details_section h4 {
+  text-align: left;
+  margin: 0px 20px 20px 0px;
+  font-family: 'Poppins';
+  font-weight: 600;
+  color: #191919;
+  font-size: 32px;
+  text-transform: uppercase;
+}
+.details_section p{
+  text-transform: uppercase;
+}
+
+.product_section figure {
+  background: #FFFFFF;
+  box-shadow: 0px 4px 19px rgb(0 0 0 / 7%);
+  border-radius: 24px;
+  height: 210px !important;
+  padding: 30px 0px 0px 0px;
+  width: 250px !important;
+  text-align: center;
+}
+.circle{
+  display: block;
+}
+.product_section figure:hover{
+  box-shadow: 0px 5px 22px rgb(17 17 18 / 7%);
+  border-radius: 24px;
+  background: #f5d6d9cc;
+}
+
+.product_section figure img {
+  vertical-align: middle;
+  border-style: none;
+  padding: 11px 0px;
+  width: 120px !important;
+  height: 150px !important;
+  object-fit: contain;
+}
+
+.product_section h5 {
+  font-weight: 500;
+  font-size: 18px;
   font-style: normal;
-  font-weight: 700;
+  color: #191919;
+  text-align: center;
+}
+
+.product_section figure p {
+  background: #f5d6d9cc;
+  border: 1px solid #f5d6d9cc;
+  border-radius: 50%;
+  margin: 0px 20px;
+  position: absolute;
+  width: 140px;
+  height: 140px;
+  z-index: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  top: 34px;
+}
+
+.gold figure p {
+  background-color: #f3d9221a !important;
+  border: 1px solid white;
+  border-radius: 50%;
+  position: absolute;
+  width: 140px;
+  height: 140px;
+  z-index: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  top: 34px;
+}
+
+.gold .col-md-4 {
+  margin-top: 25px;
+}
+
+a {
+  color: #191919 !important;
+}
+
+a:hover {
+  color: #b22d31 !important;
+  text-decoration: none;
+}
+
+.product_section figure img {
+  height: 155px;
+  z-index: 9;
+  position: relative;
+  width: 120px;
+  height: 150px;
+}
+
+.content_section {
+  overflow: hidden;
+  background: #b22d31;
+  border: 1px solid #b22d31;
+  border-radius: 40px;
+  margin: 50px 65px 0px 65px;
+  padding: 40px;
+  text-align: center;
+}
+
+.content_section h4 {
+  color: #fff;
+  font-weight: 600;
+  font-size: 26px;
+  text-align: center;
+  font-family: 'Poppins';
+}
+
+.content_section p {
+  font-weight: 400;
   font-size: 16px;
-  line-height: 19px;
-  color: #FFFFFF;
+  color: #fff;
+  text-align: center;
+  font-family: 'Poppins';
+  width: 50%;
+  margin: 0 auto;
+  font-style: normal;
+}
+
+.content_section button {
+  background: #ffb800;
+  border: 1px solid #ffb800;
+  border-radius: 80px;
+  width: 168px;
+  height: 42px;
+  margin-top: 27px;
+  font-weight: 600;
+  font-size: 18px;
+  color: #000;
+}
+
+@media only screen and (max-width: 600px) {
+
+  .product_section {
+      padding: 0px 23px;
   }
 
-.favProd button:hover {
-  color: white;
+  .product_section figure {
+      height: 158px;
+      padding: 28px 0px 0px 0px;
+  }
+
+  .product_section h4 {
+      text-align: left;
+      margin: 50px 0px 30px 0px;
+  }
+
+  .goldpage .gold h4 {
+      text-align: left;
+      margin: 50px 0px 0px 0px;
+  }
+
+  .product_section figure img {
+      height: 108px;
+      z-index: 9;
+      position: relative;
+      width: 100%;
+  }
+
+  .product_section figure p {
+      background: #f5d6d9cc;
+      border: 1px solid #f5d6d9cc;
+      border-radius: 50%;
+      margin: 0 auto;
+      position: absolute;
+      width: 85px;
+      height: 85px;
+      z-index: 0;
+      left: 0;
+      top: 34px;
+  }
+
+  
 }
+
