--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -75,6 +75,7 @@
     font-family: 'Poppins';
     font-size: 14px;
     font-style: normal;
+    margin-left: 2px;
 }
 
 .subscribe input {
@@ -112,3 +113,65 @@ ul.subscribe {
     font-size: 15px;
     font-style: normal;
 }
+
+.footer {
+        margin-top: 50px;
+        padding: 10px 28px 0px 29px;
+    }
+
+    .footer p {
+        font-family: 'Poppins';
+        font-weight: 400;
+        font-size: 15px;
+        width: 100%;
+    }
+
+    .footer .col2 ul li a {
+        font-size: 15px;
+    }
+
+    .col-md-6.col2 {
+        margin-top: 6px;
+    }
+
+    .subscribe button {
+        height: 40px;
+        margin-left: 5px;
+    }
+
+    .subscribe input {
+        width: 200px;
+    }
+    @media only screen and (max-width: 600px) {
+
+        .footer {
+            margin-top: 50px;
+            padding: 10px 28px 0px 29px;
+        }
+    
+        .footer p {
+            font-family: 'Poppins';
+            font-weight: 400;
+            font-size: 15px;
+            width: 100%;
+        }
+    
+        .footer .col2 ul li a {
+            font-size: 15px;
+        }
+    
+        .col-md-6.col2 {
+            margin-top: 6px;
+        }
+    
+        .subscribe button {
+            height: 40px;
+            margin-top: 5px;
+            margin-left: 0px;
+        }
+    
+        .subscribe input {
+            width: 200px;
+        }
+    }
+
