--- a/src/Extra-files/ListProduct.css
+++ b/src/Extra-files/ListProduct.css
@@ -1,22 +1,35 @@
 .prod {
     border: none;
-    margin: 10px;
     background-color: transparent;
     display: block;
 }
 
-.prod img {
-    height: 20px;
-    width: 100px;
+.prod .li {
+    list-style: none !important;
+    list-style-type: none !important;
+    padding: 0%;
+    margin: 2px;
+    padding: 2px 5px;
+    border-radius: 20px;
+    background-color: #B22D31;
+    cursor: pointer;
+
 }
-.prod h5 {
-    color: black;
+.prod .h5 {
+    color:white;
     font-weight: 500;
     font-size: 18px;
+    margin: 0%;
+    padding: 0%;
     font-style: normal;
     text-align: center;
 }
 
 .prod h3 {
     display: none;
+}
+
+.prod img {
+    width: 100px;
+    height: 30px;
 }
