--- a/src/Extra-files/Product_list.css
+++ b/src/Extra-files/Product_list.css
@@ -1,6 +1,9 @@
 .product-list {
-  display: flex;
     width: 100%;
-    justify-content: space-between;
-    align-content: space-between;
 }
+
+/* /* @media only screen and (max-width: 600px) {
+.product-list{
+  width:  50%
+} 
+} */
