--- a/src/Extra-files/Cate.css
+++ b/src/Extra-files/Cate.css
@@ -1,47 +1,33 @@
 
-<<<<<<< HEAD
+
  .figureCate {
-=======
-    figure {
->>>>>>> c6230da2a65090dc862c19683f43d48923176048
+
         background: #FFFFFF;
         box-shadow: 0px 4px 19px rgb(0 0 0 / 7%);
         border-radius: 24px;
         height: 210px;
         padding: 30px 10px 0px 0px;
-<<<<<<< HEAD
+
         width: 180px;
-=======
+
         width: 100%;
->>>>>>> c6230da2a65090dc862c19683f43d48923176048
+
         text-align: center;
       }
       .circle{
         display: block;
       }
-<<<<<<< HEAD
-   .figureCate:hover{
-=======
-      figure:hover{
->>>>>>> c6230da2a65090dc862c19683f43d48923176048
+    .figureCate:hover{
+
         box-shadow: 0px 5px 22px rgb(17 17 18 / 7%);
         border-radius: 24px;
         background: #f5d6d9cc;
       }
-      
-<<<<<<< HEAD
   .figureCate img {
         vertical-align: middle;
         border-style: none;
         padding: 11px 10px;
         width: 150px;
-=======
-     figure img {
-        vertical-align: middle;
-        border-style: none;
-        padding: 11px 10px;
-        width: 70%;
->>>>>>> c6230da2a65090dc862c19683f43d48923176048
         object-fit: contain;
       }
       
@@ -54,50 +40,17 @@
       }
 
       h3 {
-<<<<<<< HEAD
+
          color: white;
          font-size: 1px;
       }
       
    .figureCate p {
-=======
+
           display: none;
       }
       
-      figure p {
->>>>>>> c6230da2a65090dc862c19683f43d48923176048
-        background: #f5d6d9cc;
-        border: 1px solid #f5d6d9cc;
-        border-radius: 50%;
-        margin: 0px 20px;
-        position: absolute;
-        width: 140px;
-        height: 140px;
-        z-index: 0;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
-        top: 34px;
-      }
-      
-      .gold figure p {
-        background-color: #f3d9221a !important;
-        border: 1px solid white;
-        border-radius: 50%;
-        position: absolute;
-        width: 140px;
-        height: 140px;
-        z-index: 0;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
-        top: 34px;
-      }
-      
-      .gold .col-md-4 {
-        margin-top: 25px;
-      }
-      
+
       a {
         color: #191919 !important;
       }
@@ -106,34 +59,28 @@
         color: #b22d31 !important;
         text-decoration: none;
       }
-      
-<<<<<<< HEAD
+    
    .figureCate img {
         height: 155px;
         z-index: 9;
         position: relative;
         width: 150px;
-=======
-      figure img {
+   }
+      .figureCate img {
         height: 155px;
         z-index: 9;
         position: relative;
         width: 100%;
->>>>>>> c6230da2a65090dc862c19683f43d48923176048
       }
 
       @media only screen and (max-width: 600px) {
 
-<<<<<<< HEAD
     .figureCate {
-=======
-       figure {
->>>>>>> c6230da2a65090dc862c19683f43d48923176048
+
             height: 158px;
             padding: 28px 0px 0px 0px;
         }
-    
-<<<<<<< HEAD
+
      .figureCate img {
             height: 108px;
             z-index: 9;
@@ -141,28 +88,7 @@
             width: 150px;
         }
     
-     .figureCate p {
-=======
-        figure img {
-            height: 108px;
-            z-index: 9;
-            position: relative;
-            width: 100%;
-        }
     
-        figure p {
->>>>>>> c6230da2a65090dc862c19683f43d48923176048
-            background: #f5d6d9cc;
-            border: 1px solid #f5d6d9cc;
-            border-radius: 50%;
-            margin: 0 auto;
-            position: absolute;
-            width: 85px;
-            height: 85px;
-            z-index: 0;
-            left: 0;
-            top: 34px;
-        }
     
         
       }
